# OldHouseTextGame

./: CMakeLists.txt  README.md  build.bat
scripts/: ConcatFiles.py  FilesForConcatenation.txt
scripts/NSIS Instalator Script/: InstalatorScript.nsi
src/: Adventure.cpp  Adventure.h  Board.cpp  Board.h  Cards.cpp  Cards.h  Common.cpp  Common.h  Enemy.cpp  Enemy.h  LevelGame.h  LevelStartScreen.cpp  LevelStartScreen.h  Main.cpp  Player.cpp  Player.h  Score.cpp  Score.h  Weapon.cpp  Weapon.h
src/TextEngine/: Application.cpp  Application.h  Desktop.cpp  Desktop.h  Event.h  Level.cpp  Level.h
